--- a/survey-web/package.json
+++ b/survey-web/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-cryptojs": "^2.1.6",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
   },
@@ -37,7 +38,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "vue/no-multiple-template-root": "off"
+    }
   },
   "browserslist": [
     "> 1%",
