--- a/survey-web/package.json
+++ b/survey-web/package.json
@@ -11,9 +11,10 @@
     "@popperjs/core": "^2.10.1",
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.5.0",
+    "chart.js": "^3.5.1",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
     "vue": "^3.0.0",
-    "vue-cryptojs": "^2.1.6",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
   },
