--- a/survey-web/package.json
+++ b/survey-web/package.json
@@ -14,6 +14,8 @@
     "chart.js": "^3.5.1",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
+    "highcharts": "^9.2.2",
+    "highcharts-vue": "^1.4.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
