--- a/survey-web/package.json
+++ b/survey-web/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "highcharts": "^9.2.2",
+    "highcharts-solid-gauge": "^0.1.7",
     "highcharts-vue": "^1.4.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.11",
