--- a/survey-web/package.json
+++ b/survey-web/package.json
@@ -18,7 +18,11 @@
     "highcharts-solid-gauge": "^0.1.7",
     "highcharts-vue": "^1.4.0",
     "vue": "^3.0.0",
+    "vue-cookie": "^1.1.4",
+    "vue-cookie-next": "^1.3.0",
+    "vue-cookies": "^1.7.4",
     "vue-router": "^4.0.11",
+    "vue3-cookies": "^1.0.6",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
