--- a/survey-web/package.json
+++ b/survey-web/package.json
@@ -22,6 +22,7 @@
     "vue-cookie-next": "^1.3.0",
     "vue-cookies": "^1.7.4",
     "vue-router": "^4.0.11",
+    "vue3-carousel": "^0.2.9",
     "vue3-cookies": "^1.0.6",
     "vuex": "^4.0.2"
   },
